src/less/home.less
@import "config";

body {
  background-color: #ededed;
}

#banner {
  .lazy-box {
    &.unloaded {
      overflow-y: hidden;
      // banner min-height 70px
      height: 70px;
    }
  }
}

#content {
  > .content-inner {
    margin-top: 6px;
  }
}

#nav {
  margin: 10px 0 0;
  /*font-size: 115%;
  a.nav-btn {
    background-color: @nav-btn-bgcolor;
    color: @nav-btn-color;
    display: block;
    width: 95%;
    padding: 12px 0;
    &:hover, &:focus, &.active {
      background-color: @nav-btn-bgcolor-hover;
    }
    i, span {
      display: block;
    }
    i {
      font-size: 240%;
    }
  }*/
  .filter_nav {
    background: #FEFEFE;
    border-bottom: 1px solid #b2b2b2;
    text-align: center;
    line-height: 26px;
    >.filter_btn {
      &:hover, &:focus, &.active {
        background-color: #f6f6f6;
      }
      text-decoration: none;
      border-left: 1px solid #CCC;
      margin-left: -1px;
      font-size: 14px;
      line-height: 40px;
      color: #8C8C8C;
    }
  }
}

#brands-div {
  /*position: absolute;
  width: 80%;
  left: 10%;
  font-size: 120%;
  margin-top: 3px;
  .menu {
    background: @menu-bgcolor;
    border: 4px solid @menu-border-color;
    max-width: 500px;
    margin: 0 auto;
    .title {
      color: @menu-title-color;
      border-bottom: solid 1px @menu-border-color;
      margin-top: 0.5em;
      font-size: 120%;
    }
    a {
      color: @menu-color;
      &:hover, &:focus {
        background-color: @menu-btn-bgcolor-hover;
      }
    }
  }*/
  position: relative;
  .menu {
    position: absolute;
    width: 73%;
    right: 0;
    text-align: center;
    .heading {
      background-color: #222;
      padding: 1em 0;
      font-size: 13px;
      color: #dd1f57;
      border-bottom: 3px solid #414141;
    }
    ul {
      font-size: 12px;
      background: #333333;
      li {
        border-bottom: 1px solid #414141;
        position: relative;
        padding: 1em 0;
        a {
          display: block;
          width: 100%;
          height: 100%;
          color: #FFF;
          text-decoration: none;
          overflow: hidden;
        }
      }
    }
  }
}

#boards-div {
  ul {
    margin: 10px 0 -8px;
    li {
      margin-bottom: 8px;
      .lazy-box {
        &.unloaded {
          overflow-y: hidden;
          // board min-height 100px
          height: 100px;
        }
      }
    }
  }
}

